; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wlcore/extr_acx.c_wl1271_acx_aid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wlcore/extr_acx.c_wl1271_acx_aid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1271 = type { i32 }
%struct.wl12xx_vif = type { i32 }
%struct.acx_aid = type { i32, i32 }

@DEBUG_ACX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"acx aid\00", align 1
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ACX_AID = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"failed to set aid: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wl1271_acx_aid(%struct.wl1271* %0, %struct.wl12xx_vif* %1, i32 %2) #0 {
  %4 = alloca %struct.wl1271*, align 8
  %5 = alloca %struct.wl12xx_vif*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.acx_aid*, align 8
  %8 = alloca i32, align 4
  store %struct.wl1271* %0, %struct.wl1271** %4, align 8
  store %struct.wl12xx_vif* %1, %struct.wl12xx_vif** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @DEBUG_ACX, align 4
  %10 = call i32 @wl1271_debug(i32 %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call %struct.acx_aid* @kzalloc(i32 8, i32 %11)
  store %struct.acx_aid* %12, %struct.acx_aid** %7, align 8
  %13 = load %struct.acx_aid*, %struct.acx_aid** %7, align 8
  %14 = icmp ne %struct.acx_aid* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %3
  %16 = load i32, i32* @ENOMEM, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %8, align 4
  br label %38

18:                                               ; preds = %3
  %19 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %5, align 8
  %20 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.acx_aid*, %struct.acx_aid** %7, align 8
  %23 = getelementptr inbounds %struct.acx_aid, %struct.acx_aid* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @cpu_to_le16(i32 %24)
  %26 = load %struct.acx_aid*, %struct.acx_aid** %7, align 8
  %27 = getelementptr inbounds %struct.acx_aid, %struct.acx_aid* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  %28 = load %struct.wl1271*, %struct.wl1271** %4, align 8
  %29 = load i32, i32* @ACX_AID, align 4
  %30 = load %struct.acx_aid*, %struct.acx_aid** %7, align 8
  %31 = call i32 @wl1271_cmd_configure(%struct.wl1271* %28, i32 %29, %struct.acx_aid* %30, i32 8)
  store i32 %31, i32* %8, align 4
  %32 = load i32, i32* %8, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %18
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @wl1271_warning(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %35)
  br label %38

37:                                               ; preds = %18
  br label %38

38:                                               ; preds = %37, %34, %15
  %39 = load %struct.acx_aid*, %struct.acx_aid** %7, align 8
  %40 = call i32 @kfree(%struct.acx_aid* %39)
  %41 = load i32, i32* %8, align 4
  ret i32 %41
}

declare dso_local i32 @wl1271_debug(i32, i8*) #1

declare dso_local %struct.acx_aid* @kzalloc(i32, i32) #1

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @wl1271_cmd_configure(%struct.wl1271*, i32, %struct.acx_aid*, i32) #1

declare dso_local i32 @wl1271_warning(i8*, i32) #1

declare dso_local i32 @kfree(%struct.acx_aid*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
